Set high z-index on dialogs to ensure they are visible.

--- a/assets/src/sass/admin-form-builder.scss
+++ b/assets/src/sass/admin-form-builder.scss
@@ -454,6 +454,7 @@
 ---------------------------------------------------------------------------- */
 
 .torro-dialog {
+	z-index: 9999;
 	width: 300px;
 	background-color: #FFF;
 	border: 1px solid #CCC;
